--- a/.github/workflows/deployStorageAccount.yaml
+++ b/.github/workflows/deployStorageAccount.yaml
@@ -1,5 +1,11 @@
 on: [push]
-name: Azure ARM
+
+name: Azure ARM Deployment
+
+env:
+  AZURE_LOCATION: norwayeast
+  AZURE_RESOURCE_GROUP: qbits-github
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -13,12 +19,20 @@ jobs:
       with:
         creds: ${{ secrets.QBITS_AZURE_CREDENTIALS }}
 
+      # Create resource group
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        azcliversion: 2.0.72
+        inlineScript: |
+          az group create -l ${{ env.AZURE_LOCATION }} -n ${{ env.AZURE_RESOURCE_GROUP }}
+
       # Deploy ARM template
     - name: Run ARM deploy
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-        resourceGroupName: qbits-github
+        resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
         template: ./azuredeploy.json
         parameters: storageAccountType=Standard_LRS
 
