--- a/.github/workflows/deployStorageAccount.yaml
+++ b/.github/workflows/deployStorageAccount.yaml
@@ -26,15 +26,16 @@ jobs:
         azcliversion: 2.0.72
         inlineScript: |
           az group create -l ${{ env.AZURE_LOCATION }} -n ${{ env.AZURE_RESOURCE_GROUP }}
+          az deployment group create --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --template-file ./kubernetes/aks/azuredeploy.bicep
 
-      # Deploy ARM template
-    - name: Run ARM deploy
-      uses: azure/arm-deploy@v1
-      with:
-        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-        resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
-        template: .github/workflows/azuredeploy.json
-        parameters: storageAccountType=Standard_LRS
+    #   # Deploy ARM template
+    # - name: Run ARM deploy
+    #   uses: azure/arm-deploy@v1
+    #   with:
+    #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+    #     resourceGroupName: ${{ env.AZURE_RESOURCE_GROUP }}
+    #     template: .github/workflows/azuredeploy.json
+    #     parameters: storageAccountType=Standard_LRS
 
-      # output containerName variable from template
-    - run: echo ${{ steps.deploy.outputs.containerName }}
+    #   # output containerName variable from template
+    # - run: echo ${{ steps.deploy.outputs.containerName }}
