--- a/.github/workflows/deployStorageAccount.yaml
+++ b/.github/workflows/deployStorageAccount.yaml
@@ -23,10 +23,13 @@ jobs:
     - name: Azure CLI script
       uses: azure/CLI@v1
       with:
-        azcliversion: 2.0.72
+        azcliversion: 2.26.1
         inlineScript: |
           az group create -l ${{ env.AZURE_LOCATION }} -n ${{ env.AZURE_RESOURCE_GROUP }}
-          az deployment group create --resource-group ${{ env.AZURE_RESOURCE_GROUP }} --template-file ./kubernetes/aks/azuredeploy.bicep
+          az deployment group create \
+            --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
+            --template-file ./kubernetes/aks/azuredeploy.bicep \
+            --parameters storagePrefix=qbits
 
     #   # Deploy ARM template
     # - name: Run ARM deploy
