--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -23,21 +23,21 @@ jobs:
     - name: Azure CLI script
       uses: azure/CLI@v1
       with:
-        azcliversion: 2.26.1
+        azcliversion: 2.28.0
         inlineScript: |
           # Deploy Resource group 
           az group create -l ${{ env.AZURE_LOCATION }} -n ${{ env.AZURE_RESOURCE_GROUP }}
     
           # Deploy network 
           az deployment group create \
-            --name rollout01 \
+            --name rollout01-${{ env.GITHUB_RUN_NUMBER }} \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --template-file ./azure/azure-vnet.bicep
 
           # Get deployment output 
           az deployment group show \
             -g ${{ env.AZURE_RESOURCE_GROUP }} \
-            -n rollout01 \
+            -n rollout01-${{ env.GITHUB_RUN_NUMBER }} \
             --query properties.outputs.subnet1Id.value
 
           # Deploy Virtual Machine 
@@ -46,17 +46,24 @@ jobs:
             --name "vm-${{ env.AZURE_PREFIX }}" \
             --image UbuntuLTS \
             --admin-username azureuser \
-            --generate-ssh-keys \
-            --location ${{ env.AZURE_LOCATION }} \
-            --priority Spot \
-            --size Standard_A1_v2 \ 
-            --eviction-policy Delete \
-            --custom-data ./MyCloudInitScript.yml \
-            --public-ip-address-dns-name backend.qbits.no \ 
-            --assign-identity \
-            --role Contributor \
-            --scope "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}" \
-            --authentication-type ssh \
-            --ssh-key-values ${{ env.SSH_PUBLIC_KEY }} \
-            --tags location=${{ env.AZURE_LOCATION}} prefix=${{ env.AZURE_PREFIX }} resourcegroup=${{ env.AZURE_RESOURCE_GROUP }} \ 
-            --subnet "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}/resourcegroups/${{ env.AZURE_RESOURCE_GROUP }}/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/main"
+            --generate-ssh-keys 
+            
+          # az vm create \
+          #   --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
+          #   --name "vm-${{ env.AZURE_PREFIX }}" \
+          #   --image UbuntuLTS \
+          #   --admin-username azureuser \
+          #   --generate-ssh-keys \
+          #   --location ${{ env.AZURE_LOCATION }} \
+          #   --priority Spot \
+          #   --size Standard_A1_v2 \ 
+          #   --eviction-policy Delete \
+          #   --custom-data ./MyCloudInitScript.yml \
+          #   --public-ip-address-dns-name backend.qbits.no \ 
+          #   --assign-identity \
+          #   --role Contributor \
+          #   --scope "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}" \
+          #   --authentication-type ssh \
+          #   --ssh-key-values ${{ env.SSH_PUBLIC_KEY }} \
+          #   --tags location=${{ env.AZURE_LOCATION}} prefix=${{ env.AZURE_PREFIX }} resourcegroup=${{ env.AZURE_RESOURCE_GROUP }} \ 
+          #   --subnet "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}/resourcegroups/${{ env.AZURE_RESOURCE_GROUP }}/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/main"
