--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -64,7 +64,9 @@ jobs:
             --name backend-${{ env.AZURE_PREFIX }} \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --zone-name qbits.no \
-            --target-resource "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}/resourcegroups/${{ env.AZURE_RESOURCE_GROUP }}/providers/Microsoft.Network/publicIPAddresses/vm-${{ env.AZURE_PREFIX }}PublicIP"
+            -c backend-ystrte.norwayeast.cloudapp.azure.com
+            
+            #--target-resource "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}/resourcegroups/${{ env.AZURE_RESOURCE_GROUP }}/providers/Microsoft.Network/publicIPAddresses/vm-${{ env.AZURE_PREFIX }}PublicIP"
 
           # az vm create \
           #   --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
