add priority spot

--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -52,6 +52,7 @@ jobs:
             --admin-username azureuser \
             --public-ip-sku Standard \
             --ssh-key-values ./.ssh/id_rsa.pub \
+            --priority Spot \
             --public-ip-address-dns-name backend-${{ env.AZURE_PREFIX }}
 
           echo "# create dns zone" 
@@ -63,8 +64,7 @@ jobs:
           az network dns record-set cname create \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --zone-name azure.${{ env.AZURE_DNS_ZONE }} \
-            --name ssh \
-            --if-none-match 2> /dev/null
+            --name ssh
 
           echo "# set cname" 
           az network dns record-set cname set-record \
@@ -74,10 +74,8 @@ jobs:
             --cname backend-${{ env.AZURE_PREFIX }}.${{ env.AZURE_LOCATION }}.cloudapp.azure.com
           
           # az vm create \
-          #   --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
-          #   --name "vm-${{ env.AZURE_PREFIX }}" \
-          #   --image UbuntuLTS \
-          #   --admin-username azureuser \
+
+
           #   --generate-ssh-keys \
           #   
           #    --priority Spot \
