--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -54,19 +54,23 @@ jobs:
             --ssh-key-values ./.ssh/id_rsa.pub \
             --public-ip-address-dns-name backend-${{ env.AZURE_PREFIX }} \
             --assign-identity \
+            --role Contributor \
+            --scope "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}/resourceGroups/${{ env.AZURE_RESOURCE_GROUP }}" \
             --size Standard_B2s
 
           echo "# open port 80 for web traffic"
           az vm open-port \
             --port 80 \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
-            --name "vm-${{ env.AZURE_PREFIX }}"
+            --name "vm-${{ env.AZURE_PREFIX }}" \
+            --priority 900
 
           echo "# open port 443 for web traffic"
           az vm open-port \
             --port 443 \
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
-            --name "vm-${{ env.AZURE_PREFIX }}"
+            --name "vm-${{ env.AZURE_PREFIX }}" \
+            --priority 800
 
           echo "# create dns zone" 
           az network dns zone create \
@@ -118,7 +122,7 @@ jobs:
 
           #   --assign-identity \
           #   --role Contributor \
-          #   --scope "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}" \
+          #   
           #   --authentication-type ssh \
           #   --tags location=${{ env.AZURE_LOCATION}} prefix=${{ env.AZURE_PREFIX }} resourcegroup=${{ env.AZURE_RESOURCE_GROUP }} \ 
           #   --subnet "/subscriptions/${{ env.AZURE_SUBSCRIPTION_ID }}/resourcegroups/${{ env.AZURE_RESOURCE_GROUP }}/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/main"
