--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -14,7 +14,7 @@ jobs:
       # Checkout code
     - uses: actions/checkout@main
 
-#       # Log into Azure
+    # Log into Azure
     - uses: azure/login@v1
       with:
         creds: ${{ secrets.QBITS_AZURE_CREDENTIALS }}
@@ -23,7 +23,7 @@ jobs:
     - name: Azure CLI script
       uses: azure/CLI@v1
       with:
-        azcliversion: 2.28.0
+        azcliversion: 'latest'
         inlineScript: |
           echo "# Enable xtrace"
           set -o xtrace
